--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -9,6 +9,6 @@ h6 { font-size: 1.2rem; }
 
 body, input, textarea, select, button, p { font-family: 'Inter', sans-serif; }
 
-p { font-size: 1em; }
+p { font-size: 1em; line-height: 1.5; }
 
 small { font-size: 0.833rem; }
